# Outrelix

./: .env  .env.production  .firebaserc  .gitignore  .vercelignore  DEPLOYMENT_GUIDE.md  ENVIRONMENT_SETUP.md  README.md  SEO_OPTIMIZER_TESTING_GUIDE.md  ai_service.py  app.py  client_secret.json  flask_app.py  flask_simple.py  git_files.txt  leads.csv  main.py  main_api.py  notified_replies.txt  outreach.py  package-lock.json  package.json  render.yaml  requirements.txt  requirements_complete.txt  requirements_simple.txt  runcommands.md  scraper.py  start.sh  test_lead_run.py  test_server.py  token.json  vercel.json
Outrelix/: app_complete.py  (+7 more)
Outrelix/Outrelix-Scraper/: .render-build.sh  EMPLOYEE_READINESS_ASSESSMENT.md  EMPLOYEE_SETUP_GUIDE.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_GUIDE.md  QUICK_INTEGRATION.md  QUICK_START.md  README.md  README_STARTUP.md  api_env_collector.txt  check_env.py  generate_token.py  main.py  mypy.ini  pyproject.toml  requirements.txt  run_server.py  start_server.py  test_contact_extractor.py
Outrelix/Outrelix-Scraper/.github/workflows/: ci.yml
Outrelix/Outrelix-Scraper/data/: continuous_leads.db  lead_targets.db
Outrelix/Outrelix-Scraper/output/run_20250829_102538/: verified_leads_dryrun.xlsx
Outrelix/Outrelix-Scraper/src/: __init__.py
Outrelix/Outrelix-Scraper/tests/: test_cli_and_apis.py  test_email_validator.py  test_enrich_ai.py  test_fuzzy.py  test_hashing_and_phone.py  test_merge_and_validation.py  test_pipeline.py  test_pipeline_email_validation.py  test_selection_and_exports.py  test_smoke_exports_and_determinism.py
(+479 files in other folders)
